added fetch ad groups and tests, fixed previous tests